recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:5: error: not found: value step
    current(step)
            ^